# cmake-study

./: CMakeLists.txt  Makefile  README.md  lib2.cmake  tmp.cmake
src/: CMakeLists.txt  src.cmake
study1/: CMakeLists.txt  lib1.cmake
study1/src/: src.cmake
study2/: CMakeLists.txt  Makefile  sample.cpp  sample_lib1.cpp  sample_lib2.cpp
study3/: CMakeLists.txt  Makefile  samp_func.cmake
